--- a/MaquinaDeVendas/src/main/java/br/edu/ifsc/maquinadevendas/maquinadevendas/TelaAdmin.form
+++ b/MaquinaDeVendas/src/main/java/br/edu/ifsc/maquinadevendas/maquinadevendas/TelaAdmin.form
@@ -2,7 +2,7 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Admin"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
@@ -116,6 +116,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Produto"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCadastraProdutoActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnCadastraFormaPgto">
               <Properties>
@@ -124,6 +127,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Forma de pagamento"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCadastraFormaPgtoActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
